backend/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentapp-svc
  labels:
    app: studentapp
spec:
  selector:
    app: studentapp
  ports:
  - port: 8080
    targetPort: 8080
