backend/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentapp-ingress
  labels:
    app: studentapp
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: studentapp-svc
            port: 
              number: 8080

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: studentapp-frontend-svc
            port: 
              number: 80
